# git-automation-test

./: .gitignore  hello.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge-infra.yml  build-pip-cache.yml  bump-version.yml  infra-bypass.yml  prevent-infra-prs.yml  prevent-workflows-in-pr.yml  prune-stale-caches.yml  sync-dev.yml  test-and-pr.yml
src/pkg/module/: hello15.py  hello8.py
tests/unit/module/: test_hello10.py  test_hello12.py  test_hello13.py  test_hello14.py  test_hello15.py  test_hello5.py  test_hello6.py  test_hello7.py  test_hello8.py  test_hello9.py
