[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchkeeper"
version = "0.0.0"
description = "A lightweight service monitoring tool that generates static status pages"
readme = "README.md"
authors = [
    {name = "Sarp User", email = "sarpuser@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/sarpuser/watchkeeper"
"Bug Tracker" = "https://github.com/sarpuser/watchkeeper/issues"

# [project.scripts]
# watchkeeper = "watchkeeper.cli.parser:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=watchkeeper --cov-report=xml --cov-report=term-missing --cov-fail-under=90"
